--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de Figma - 2024</title>
-     <link rel="stylesheet" href="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/style.css">
+    <link rel="stylesheet" href="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 
     <!-- Header com imagem -->
     <header>
-        <img class="banner" src="https://github.com/Geisbelly-vic/Curso-de-Figma-2024-02/blob/main/Imagens/Frame%2026%20(1).png" alt="Curso de Figma">
+        <img class="banner" src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Frame%2026%20(1).png" alt="Curso de Figma">
         <div class="welcome-text">
             <h1>Pronto para dar vida aos seus designs?</h1>
             <p>Neste curso vamos explorar do básico ao intermediário do Figma para transformar seus projetos em experiências dinâmicas e envolventes. Prepare-se para mergulhar em um mundo de criatividade e inovação!</p>
@@ -25,13 +25,13 @@
         <h1>MINISTRANTES</h1>
         <div class="profiles">
             <a href="https://github.com/Geisbelly-vic">
-                <img src="https://github.com/Geisbelly-vic/Curso-de-Figma-2024-02/blob/main/Imagens/Integrante/Group%20107.png" alt="Geisbelly" class="profile-img">
+                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Integrante/Group%20107.png" alt="Geisbelly" class="profile-img">
             </a>
             <a href="https://github.com/dy3nd">
-                <img src="https://github.com/Geisbelly-vic/Curso-de-Figma-2024-02/blob/main/Imagens/Integrante/Group%20105.png" alt="Lucas" class="profile-img">
+                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Integrante/Group%20105.png" alt="Lucas" class="profile-img">
             </a>
             <a href="https://github.com/livaibrr">
-                <img src="https://github.com/Geisbelly-vic/Curso-de-Figma-2024-02/blob/main/Imagens/Integrante/Group%20106.png" alt="Levi" class="profile-img">
+                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Integrante/Group%20106.png" alt="Levi" class="profile-img">
             </a>
         </div>
     </section>
@@ -67,13 +67,13 @@
         <h1>MATERIAIS</h1>
         <div class="material-links">
             <a href="https://www.figma.com/proto/TrsbL0yJsZr7T5POs8L3F5/Slides---Curso-de-Figma?type=design&node-id=1016-532&t=4SqJmoj10XIwfhka-1&scaling=contain&page-id=0%3A1&mode=design">
-                <img src="https://github.com/Geisbelly-vic/Curso-de-Figma-2024-02/blob/main/Imagens/Frame%2028.png" alt="Slides">
+                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Frame%2028.png" alt="Slides">
             </a>
             <a href="https://www.figma.com/proto/rIhu55GF3hGfxozufJoR5N/WhatsApp?type=design&node-id=1-115&t=lCTrLiOsQk06dOhK-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A87">
-                <img src="https://github.com/Geisbelly-vic/Curso-de-Figma-2024-02/blob/main/Imagens/Frame%2027.png" alt="Protótipo">
+                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Frame%2027.png" alt="Protótipo">
             </a>
             <a href="https://github.com/Geisbelly-vic/Curso-de-Figma-2024-02/tree/main/Imagens/M%C3%ADdias">
-                <img src="https://github.com/Geisbelly-vic/Curso-de-Figma-2024-02/blob/main/Imagens/Frame%2029.png" alt="Mídias">
+                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Frame%2029.png" alt="Mídias">
             </a>
         </div>
     </section>
@@ -83,7 +83,7 @@
         <h1>YOUTUBE</h1>
         <p>No dia 02/05, lançaremos os vídeos no canal</p>
         <a href="https://www.youtube.com/channel/UCnqEVsYOKpvv7uOTS5im1yg">
-            <img src="https://github.com/Geisbelly-vic/Curso-de-Figma-2024-02/blob/main/Imagens/Frame%2030%20(1).png" alt="YouTube">
+            <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Frame%2030%20(1).png" alt="YouTube">
         </a>
     </section>
 
