--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             margin: 0;
             padding: 0;
             line-height: 1.6;
+            background-color: #f4f4f4;
         }
         header {
             position: relative;
@@ -23,6 +24,7 @@
         .banner {
             width: 100%;
             height: auto;
+            filter: brightness(0.8);
         }
         .welcome-text {
             position: absolute;
@@ -34,7 +36,7 @@
             border-radius: 10px;
         }
         nav {
-            background: #333;
+            background: #21C063;
             color: white;
             padding: 15px;
             display: flex;
@@ -52,7 +54,7 @@
             transition: background 0.3s;
         }
         nav a:hover {
-            background: #555;
+            background: #18a052;
         }
         section {
             padding: 20px;
@@ -71,10 +73,15 @@
         .profile-img:hover, .material-links img:hover {
             transform: scale(1.05);
         }
+        .youtube img {
+            width: 150px;
+            display: block;
+            margin: 20px auto;
+        }
         footer {
             text-align: center;
             padding: 20px;
-            background: #333;
+            background: #21C063;
             color: white;
         }
         @media (max-width: 768px) {
@@ -183,7 +190,7 @@
 
     <!-- Footer -->
     <footer>
-        <img src="https://capsule-render.vercel.app/api?type=waving&color=21C063&height=120&section=footer" alt="footer">
+        <p>&copy; 2024 Curso de Figma. Todos os direitos reservados.</p>
     </footer>
 
 </body>
