--- a/index.html
+++ b/index.html
@@ -99,10 +99,7 @@
         }
         @media (max-width: 480px) {
             nav {
-                flex-direction: column;
-            }
-            nav a {
-                margin: 5px 0;
+                display: none; /* Oculta o menu de navegação em telas pequenas */
             }
             .welcome-text {
                 padding: 10px;
