--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             margin: 0;
             padding: 0;
             line-height: 1.6;
-            background-color: #f4f4f4;
+            background-color: #0C131B;
         }
         header {
             position: relative;
