--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
         </div>
     </section>
 
+     <section id="ministrantes" class="ministrantes">
+        <h1>ASSISTENTES</h1>
+        <div class="profiles">
+            <a href="https://github.com/">
+                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Integrante/Group%2021.png" alt="Maria Clara" class="profile-img">
+            </a>
+            <a href="https://github.com/">
+                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Integrante/Group%2022.png" alt="Samuel" class="profile-img">
+            </a>
+        </div>
+    </section>
+
     <!-- Sobre o curso -->
     <section id="sobre-curso" class="sobre-curso">
         <h1>SOBRE O CURSO</h1>
