--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <h1>ASSISTENTES</h1>
         <div class="profiles">
             <a href="https://github.com/">
-                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Integrante/Group%2021.png" alt="Maria Clara" class="profile-img">
+                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Integrante/Frame%2021.png" alt="Maria Clara" class="profile-img">
             </a>
             <a href="https://github.com/">
-                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Integrante/Group%2022.png" alt="Samuel" class="profile-img">
+                <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Integrante/Frame%2022.png" alt="Samuel" class="profile-img">
             </a>
         </div>
     </section>
@@ -102,6 +102,7 @@
     <!-- YouTube -->
     <section id="youtube" class="youtube">
         <h1>YOUTUBE</h1>
+        <p>Acesse ao nosso curso no YouTube</p>
         <a href="https://www.youtube.com/channel/UCnqEVsYOKpvv7uOTS5im1yg">
             <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Frame%2030%20(1).png" alt="YouTube">
         </a>
