--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="ministrantes" class="ministrantes">
         <h1>MINISTRANTES</h1>
         <div class="profiles">
-            <a href="https://github.com/Geisbelly-vic">
+            <a href="https://github.com/geisbelly">
                 <img src="https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/Integrante/Group%20107.png" alt="Geisbelly" class="profile-img">
             </a>
             <a href="https://github.com/dy3nd">
